Add new legal focus computation